# KUAC_2024

./: .gitignore  README.md  setup.py
ar_tag_driver/: CMakeLists.txt  package.xml
ar_tag_driver/launch/: ar_tag_driver.launch
ar_tag_driver/src/: ar-not-detected.txt  ar-tag-position-guide.txt  ar_tag_driver.py  ar_tag_driver_backup.py  ar_tag_driver_cpp.cpp  sort_test.py
cv_detect/: CMakeLists.txt  package.xml
cv_detect/launch/: rubbercone_orange_detection.launch  stopline_detect.launch  stopline_detection.launch  traffic_detect.launch  traffic_detection.launch
cv_detect/src/: rubbercone_orange_detection.py  stopline_detect.py  stopline_detection.py  stopline_testing.py  traffic_detect.py  traffic_detection.py  traffic_detection_junho_testing.py  traffic_test.py  utils.py  신호등인지안됨.txt
heading/: CMakeLists.txt  package.xml
heading/launch/: imu_heading.launch
heading/src/: heading.py  imu_heading_calc.cpp
lane_detection/: CMakeLists.txt  package.xml
lane_detection/launch/: lane_detection.launch  lane_detection_debugging.launch  lane_detection_testing.launch
obstacle_detector/: CMakeLists.txt
pytorch-ssd/: run_ssd_live_demo.py  run_ssd_live_demo_print.py
sensor_manager/: CMakeLists.txt  package.xml
xycar_device/xycar_lidar/: CMakeLists.txt  README.md  package.xml
xycar_device/xycar_lidar/launch/: xycar_lidar.launch  xycar_lidar_rviz.launch
xycar_device/xycar_lidar/rviz/: xycar_lidar.rviz
xycar_device/xycar_lidar/src/: rplidar_node.cpp  rplidar_viewer.py  ydlidar_node.cpp
xycar_planner/: CMakeLists.txt  package.xml
(+92 files in other folders)
